==========
02/03/2009
==========

- Atualizacoes e melhorias no codigo base
- Inclusao de classe para gerenciamento de mensagens

HORAS TRABALHADAS: 8h

==========
04/03/2009
==========

- Atualizacoes e melhorias no codigo base

HORAS TRABALHADAS: 4h

==========
06/03/2009
==========

- Bugfixes

HORAS TRABALHADAS: 8h

==========
07/03/2009
==========

- Bugfixes

HORAS TRABALHADAS: 7h

==========
08/03/2009
==========

- Bugfixes
- Novas implementacoes no dashboard

HORAS TRABALHADAS: 5h