@@ -39,3 +39,11 @@ HORAS TRABALHADAS: 7h
 - Novas implementacoes no dashboard
 
 HORAS TRABALHADAS: 5h
+
+==========
+13/03/2009
+==========
+
+- Atualizacoes no layout e javascript do dashboard
+
+HORAS TRABALHADAS: 4h
